# mongodb-models-rs

./: .env  Cargo.toml  README.md  docker-compose.yml
src/: config.rs  db.rs  init.rs  main.rs
src/models/: airport.rs  mod.rs
